[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_socketio = { version = "0.4.2", features = ["async"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.30"
serde_json = "1.0.114"