[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.30"
futures = "0.3.30"
serde_json = "1.0.114"
rsocket_rust = "0.7"
rsocket_rust_transport_websocket = "0.7"
prost = "0.12"

[build-dependencies]
prost-build = "0.12.3"