[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.78"
anyhow = "1.0.81"
baodatui-macro = { path = "../macro" }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.30"
futures = "0.3.30"
serde_json = "1.0.114"
rsocket_rust = "0.7"
rsocket_rust_transport_websocket = "0.7"
enum-iterator = "2.0.0"
rand = "0.8.5"
time = "0.3.34"
serde = { version = "1.0.197", features = ["derive"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
[dependencies.uuid]
version = "1.7.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
